<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".FormOrderActivity">

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/name"
        android:hint="@string/name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/phone"
        android:hint="@string/phone"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/edt_address"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/alamat"
        android:hint="@string/alamat"
        android:inputType="textCapWords"/>

    <EditText
        android:id="@+id/edt_from_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/date_from"
        android:hint="@string/date_from"
        android:inputType="date"/>

    <EditText
        android:id="@+id/edt_until_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints="@string/until_from"
        android:hint="@string/until_from"
        android:inputType="date"/>

    <Button
        android:id="@+id/btn_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Order Sekarang" />

</LinearLayout>